@@ -75,7 +75,7 @@ public final class SourceCodeImpl implements SourceCode {
 	public String getFullPathSourceName() {
 		if (this.macroElement.isEmpty()) {
 			List<String> split = Splitter.on('/').splitToList(this.sourceName);
-			return split.get(split.size() - 1);
+			return split.getLast();
 		}
 
 		String fullPathSourceName = this.macroSourceCode.map(SourceCode::getFullPathSourceName).orElseThrow();
